--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "homepage": "https://ft_player.fivem.tools",
   "files": [
-    "src/**/*"
+    "src/**/*",
+    "dist/*",
+    "VERSION",
+    "LICENSE"
   ]
 }
