--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fivemtools/ft_player",
-  "version": "2.1.0",
-  "description": "Player Manager for fivem",
+  "version": "2.1.3",
+  "description": "Player Manager for Fivem",
   "main": "src/index.js",
   "directories": {
     "doc": "docs"
@@ -16,8 +16,8 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "build-client": "webpack --mode production --config client.config.js",
-    "build-server": "webpack --mode production --config server.config.js"
+    "push": "npm publish --access=public --scope=fivemtools",
+    "docs": "./node_modules/.bin/esdoc"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,6 @@
   "homepage": "https://ft_player.fivem.tools",
   "files": [
     "src/**/*",
-    "dist/*",
     "VERSION",
     "LICENSE"
   ]
